--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Motivation Meme</title>
+  <title>Sid Loves Bingus</title>
   <link rel="stylesheet" href="./style.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,7 +16,7 @@
     <img class="motivation-img" src="./assets/images/bingus.png" src="bingus" />
     <h1>BINGUS</h1>
     <p>I Love Him</p>
-    <p>this website is still a work in progress...</p>
+    <p class="bottom-text">this website is still a work in progress...</p>
   </div>
 </body>
 
